--- a/vistas/portal/docente/cursos/notas/registro-notas.html
+++ b/vistas/portal/docente/cursos/notas/registro-notas.html
@@ -7,59 +7,17 @@
     <title>Universidad Nacional Federico Villarreal | Docentes</title>
     <link rel="shortcut icon" href="../../../../../img/universidad/UNFV_ico.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="registro-notas.css">
+    <link rel="stylesheet" href="registro-notas-table.css">nk
+
     <script type="module" src="registro-notas.js"></script>
+    <script type="module" src="registro-notas-table.js"></script>
 
     <script src="https://unpkg.com/xlsx@0.16.9/dist/xlsx.full.min.js"></script>
     <script src="https://unpkg.com/file-saverjs@latest/FileSaver.min.js"></script>
     <script src="https://unpkg.com/tableexport@latest/dist/js/tableexport.min.js"></script>
 
-    <style>
-        .table-container {
-            max-height: 400px;
-            overflow-y: auto;
-            position: relative;
-            margin: 40px 0 0 40px;
-        }
-
-        #notasTable {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        #notasTable th,
-        #notasTable td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        #notasTable th {
-            background-color: #f2f2f2;
-        }
-
-        .button-container {
-            margin: 40px 0 0 40px;
-        }
-
-        .button-container button {
-            background-color: #f8ab7c;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-right: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .button-container button:hover {
-            background-color: #fa8b4b;
-        }
-    </style>
 </head>
 
 <body>
@@ -125,106 +83,6 @@
             </div>
         </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var tableBody = document.querySelector('#notasTable tbody');
-            var data = [
-                "García Pérez, María Isabel",
-                "Martínez López, Juan Carlos",
-                "Hernández Rodríguez, Ana Sofía",
-                "López García, Luis Miguel",
-                "González Martínez, Andrea Fernanda",
-                "Díaz Hernández, Jorge Alejandro",
-                "Pérez Sánchez, Laura Valentina",
-                "Rodríguez González, Carlos Eduardo",
-                "Sánchez Martínez, Sofía Alejandra",
-                "Ramírez Hernández, José Luis",
-                "Flores Rodríguez, Daniela Fernanda",
-                "Torres López, Juan Manuel",
-                "Vázquez Ramírez, María José",
-                "Gómez Pérez, Ricardo Arturo",
-                "Mendoza Sánchez, Karla Patricia",
-                "Jiménez González, Andrés Felipe",
-                "Ruiz Martínez, Paulina Gabriela",
-                "Castillo Díaz, Fernando Alberto",
-                "Chávez Vázquez, Ana Karen",
-                "Núñez Gómez, Sebastián Alejandro",
-                "Delgado Pérez, Andrea Paola",
-                "Vargas Rodríguez, José Antonio",
-                "Molina Sánchez, Brenda Guadalupe",
-                "Ramos Torres, Juan Pablo",
-                "Cruz Jiménez, María Fernanda",
-                "Ortega Ruiz, Miguel Ángel",
-                "Salazar García, Alejandra",
-                "Mejía Díaz, Roberto Carlos",
-                "Navarro Martínez, Natalia Andrea",
-                "Herrera López, Gabriel Alejandro",
-                "Acosta Vázquez, Ana Laura",
-                "Santos Pérez, Eduardo José",
-                "Álvarez García, Valeria",
-                "Ríos Hernández, Luis Fernando",
-                "Pacheco Sánchez, Ana Sofía",
-                "Campos Rodríguez, David Alejandro",
-                "Morales Vargas, Andrea Nicole",
-                "Guerrero Reyes, Juan José",
-                "Fuentes Martínez, Mariana",
-                "Rosales López, Francisco Javier"
-            ];
-
-            function calcularPromedio(row) {
-                var ep = parseInt(row.cells[2].textContent) || 0;
-                var ef = parseInt(row.cells[3].textContent) || 0;
-                var ta = parseInt(row.cells[4].textContent) || 0;
-
-                if (!isNaN(ep) && !isNaN(ef) && !isNaN(ta) && ep > 0 && ef > 0 && ta > 0) {
-                    var promedio = (ep * 0.3 + ef * 0.5 + ta * 0.2);
-                    row.cells[5].textContent = promedio.toFixed(2);
-                } else {
-                    row.cells[5].textContent = ""; // Vaciar la celda de promedio si no todos los campos están completos
-                }
-            }
-
-            for (var i = 0; i < data.length; i++) {
-                var row = tableBody.insertRow();
-                row.insertCell().textContent = (i + 1);
-                row.insertCell().textContent = data[i];
-                row.insertCell().contentEditable = true;
-                row.insertCell().contentEditable = true;
-                row.insertCell().contentEditable = true;
-                row.insertCell().textContent = "";
-
-                row.cells[2].addEventListener('input', function () {
-                    calcularPromedio(this.parentNode);
-                });
-                row.cells[3].addEventListener('input', function () {
-                    calcularPromedio(this.parentNode);
-                });
-                row.cells[4].addEventListener('input', function () {
-                    calcularPromedio(this.parentNode);
-                });
-            }
-        });
-
-        const $btnExportar = document.querySelector("#btnExportar");
-        const $btnIncidencia = document.querySelector("#btnIncidencia");
-        const $tabla = document.querySelector("#notasTable");
-
-        $btnExportar.addEventListener("click", function () {
-            let tableExport = new TableExport($tabla, {
-                exportButtons: false,
-                filename: "Reporte_de_notas",
-                sheetname: "Notas",
-            });
-            let datos = tableExport.getExportData();
-            let preferenciasDocumento = datos.notasTable.xlsx;
-            tableExport.export2file(preferenciasDocumento.data, preferenciasDocumento.mimeType, preferenciasDocumento.filename, preferenciasDocumento.fileExtension, preferenciasDocumento.merges, preferenciasDocumento.RTL, preferenciasDocumento.sheetname);
-        });
-
-        $btnIncidencia.addEventListener("click", function () {
-            window.location.href = "incidencia-nota.html"; // Cambia "incidencia-nota.html" por la URL a la que quieres redirigir
-        });
-    </script>
 </body>
 
 </html>
