--- a/vistas/portal/docente/cursos/notas/registro-notas.html
+++ b/vistas/portal/docente/cursos/notas/registro-notas.html
@@ -13,6 +13,7 @@
 
     <script type="module" src="registro-notas.js"></script>
     <script type="module" src="registro-notas-table.js"></script>
+    <script type="module" src="registro-notas-export.js"></script>
 
     <script src="https://unpkg.com/xlsx@0.16.9/dist/xlsx.full.min.js"></script>
     <script src="https://unpkg.com/file-saverjs@latest/FileSaver.min.js"></script>
