--- a/vistas/portal/alumno/dashboard-alumnos.html
+++ b/vistas/portal/alumno/dashboard-alumnos.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alumnos</title>
+
+    <style>
+        p {
+            text-align: center;
+            font-size: 100px;
+            text-decoration: overline;
+            color: rgb(253, 130, 48);
+            text-shadow: 3px 3px 3px black;
+        }
+    </style>
 </head>
 <body>
-    
+    <p>Vista en construcción</p>
 </body>
 </html>
